--- a/docs/src/index.dox
+++ b/docs/src/index.dox
@@ -1,3 +1,3 @@
-/** \mainpage Arduino-IoTwin
-Arduino IoT device twin : device tracker with device data backup and restore managment
+/** \mainpage Simple-IoTwin
+Simple IoT device twin : device tracker with device data backup and restore managment
 */
